<resources>
    <string name="app_name">Sprint_1</string>
    <string name="NombreTitulo">Ámsterdam</string>
    <string name="Titulo1">La casa de Ana Frank</string>
    <string name="descripcion1">Descubre como vivian la familia frank y las demas personas escondidas durante la ocupacion alemana</string>
    <string name="Titulo2">Museo van Gogh</string>
    <string name="descripcion2">El Museo Van Gogh es una pinacoteca ubicada en Ámsterdam, Países Bajos, que alberga una colección de obras del pintor neerlandés Vincent van Gogh</string>
    <string name="titulo3">El concertgebouw</string>
    <string name="descripcion3">Visista el Concentgebouw en Amsterdam y disfruta de la musica mas maravillosa.</string>
    <string name="titulo4">Vondelpark</string>
    <string name="descripcion4">Parque más grande de Ámsterdam y el lugar preferido para caminar, pasear en bicicleta, practicar deportes, comer al aire libre o relajarse sentado en alguno de sus cafés con terraza.</string>
    <string name="imagen1">Imagen1</string>
    <string name="imagen2">Imagen2</string>
    <string name="imagen3">Imagen3</string>
    <string name="imagen4">Imagen4</string>
    <string name="descripci_n">Descripción</string>
    <string name="descrition">Amsterdam es la capital de los Países Bajos, conocida por su patrimonio artístico, su elaborado sistema de canales y sus casas angostas con fachadas de dos aguas</string>
    <string name="temperatura">Temperatura</string>
    <string name="Temp">Temperatura generalmente varíable de 1 °C a 22 °C</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="Ubicacion">Ámsterdam es la capital oficial del Reino de los Países Bajos.</string>
    <string name="sitios_recomendados">Sitios recomendados</string>
    <string name="despliegue">despliegue</string>
    <string name="conciertos">conciertos</string>
    <string name="museo">museo</string>
    <string name="casa">casa</string>
</resources>