<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/tituloPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/NombreTitulo"
        android:textSize="34sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10sp">

        <ImageView
            android:id="@+id/imagenPOI1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/imagen1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTitulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Titulo1"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/Descripcion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:text="@string/descripcion1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10sp">

        <ImageView
            android:id="@+id/imagenPOI2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/imagen2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTitulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Titulo2" />

            <TextView
                android:id="@+id/Descripcion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:text="@string/descripcion2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10sp">

        <ImageView
            android:id="@+id/imagenPOI3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/imagen3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTitulo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo3" />

            <TextView
                android:id="@+id/Descripcion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:text="@string/descripcion3" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10sp">

        <ImageView
            android:id="@+id/imagenPOI4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/imagen4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/titulo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo4" />

            <TextView
                android:id="@+id/Descripcion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="20sp"
                android:text="@string/descripcion4" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>